--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1250">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Čunovské jazerá bez odpadkov</title>
+<title>ÄŚunovskĂ© jazerĂˇ bez odpadkov</title>
 	
 <style>
 <!--
@@ -32,7 +32,7 @@ u	{text-decoration-color:blue;
 <body lang=SK link=blue vlink="#954F72" style='word-wrap:break-word'>
 
 <br><br>
-Stránka bola presmerovaná sem:<a href="https://cunovske-jazera-bez-odpadkov.github.io"> <u>https://cunovske-jazera-bez-odpadkov.github.io</u></a>
+StrĂˇnka bola presmerovanĂˇ sem:<a href="https://cunovske-jazera-bez-odpadkov.github.io"> <u>https://cunovske-jazera-bez-odpadkov.github.io</u></a>
 <br><br>	
 	
 
