--- a/2022.html
+++ b/2022.html
@@ -3265,6 +3265,101 @@ Okrem toho som pozbieral sklené fľaše 🍾, odpad po rybároch 🎣  , fajči
  </tr>
 </table>
 
+<br>
+<br>
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 8.9.2022</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🌫️🏞️🌫️Čunovské jazerá sa ráno pred tromi dňami ponorili do parádnej hmly 🌫️  Na jednom mieste kde som trávil čas som pozbieral iba 4 plechovky a zabudnuté plavky 🇿♻🍺🥫🩳 </span></p>
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+Dnešný deň svietilo slniečko ☀️ a tak sa na jazere ukázali všetky nádherné jesenné farby 🍂  🌿🍁. Na jednom mieste vo vode  💦💦, nejaký "odborník" pozväzoval brvná syntetickými špagátmi 🧵a tak som ich postupne dal dole✂️🔪.  
+</span></p>
+
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+Z vody som nakoniec vylovil ešte starú konzervu🥫<br>
+Venoval som sa ešte jednej činnosti 💪😓🌿 o ktorej napíšem viac v ďalšom mojom príspevku. 🗓️ 💚 🚮♻
+</span></p>
+
+<p class=MsoNormal>	
+#hmla #cunovskejazera #jazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #lake #gravelpit #cistavoda #zberodpadkov #plasty #upratovanie
+</p>
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image299.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image299.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image300.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image300.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image301.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image301.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image302.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image302.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image303.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image303.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image304.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image304.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image305.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image305.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image306.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image306.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image307.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image307.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image308.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image308.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image309.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image309.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image310.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image310.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+
 	
 	
 
