--- a/2022.html
+++ b/2022.html
@@ -3367,14 +3367,17 @@ style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
 na facebooku 23.10.2022</span></u></b></span></p>	
 	
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
-????????? ??  ????  Čunovské jazerá boli dnes znovu zahalené v tajomnej hmle ??? Na zemi som si všimol dosť veľa akýchsi zvláštnych horizontálnych pavučín??????? Pravdepodobne ich tam pradú  pavúky zvané plachtárky (Linyphiidae). ??? Na Slovensku žije 326 druhov týchto trpasličích pavúkov. ??????.</span></p>
+🌫️🏞️🌫️ 🍂  🌿🍁  Čunovské jazerá boli dnes znovu zahalené v tajomnej hmle 🌫️ Na zemi som si všimol dosť veľa akýchsi zvláštnych horizontálnych pavučín🌾🕸️🌾 Pravdepodobne ich tam pradú  pavúky zvané plachtárky (Linyphiidae). 🕷️ Na Slovensku žije 326 druhov týchto trpasličích pavúkov. 🕸️🕷️.
+</span></p>
 	
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
- ????Venoval som sa aj zberu odpadkov. Zbieral som  v zadu v kríkoch veľkého jazera, aj na miestach kde sa v lete schádza mládež. ???????? ?? ??  ?? ???? Podľa odpadkov z minulosti (ako napr. PET fľaše z dierou, malé zip vrecúška, striekačky, plechovky, cigarety atď.) sa dá ľahko zistiť čo na týchto miestach deťúrence robia ????.</span></p>
+ 🧹🚶Venoval som sa aj zberu odpadkov. Zbieral som  v zadu v kríkoch veľkého jazera, aj na miestach kde sa v lete schádza mládež. 👦👧👦🌿 🚬 🟩  💉 🍾🍻 Podľa odpadkov z minulosti (ako napr. PET fľaše z dierou, malé zip vrecúška, striekačky, plechovky, cigarety atď.) sa dá ľahko zistiť čo na týchto miestach deťúrence robia 🍼🥳.
+</span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
-Dnes som pozbieral zip sáčok ?? ??,  dosku z tvrdenej PUR peny  ?? , fľašku zo šampsu ?? plavky a boxerky ??, plážovú podložku ?, šľapku??, mikrotén, fajčiarsky odpad ??, plechovky, PET, detskú hračku??, alobal a kadejaké iné odpadky ??.
-????????</span></p>
+Dnes som pozbieral zip sáčok 🟩 🌿,  dosku z tvrdenej PUR peny  🟨 , fľašku zo šampsu 🍾 plavky a boxerky 🩳, plážovú podložku ▓, šľapku🩴, mikrotén, fajčiarsky odpad 🚬, plechovky, PET, detskú hračku🦉, alobal a kadejaké iné odpadky 🎊.
+💚🏞️🚮♻
+</span></p>
 
 <p class=MsoNormal>	
 #hmla #cunovskejazera #jazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cutenovo #rusovce #bratislava #luznelesy #slovensko #tráva #mládež #cistavoda #zberodpadkov #plasty #upratovanie
@@ -3466,19 +3469,19 @@ style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
 na facebooku 30.10.2022</span></u></b></span></p>	
 	
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
-???? ???? ??? ?? Kríky v zadu na veľkom jazere nikdy nesklamú. Ľudia si z nich robia odpadkové koše. Dnes som našiel veľa odpadu poschovávaného kade tade a hlavne pod padnutými brvnami. 
+🌵🌳 🌿💦 🏞️ 🍂 Kríky v zadu na veľkom jazere nikdy nesklamú. Ľudia si z nich robia odpadkové koše. Dnes som našiel veľa odpadu poschovávaného kade tade a hlavne pod padnutými brvnami. 
 </span></p>
 	
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
-?? Niektorí rybári sa boja rybárskej stráže, pretože podľa zákona o rybárstve nesmú mať neporiadok na mieste kde lovia ryby. A tak všetok odpad čo tam nájdu a vyprodukujú poschovávajú kde len môžu. Ale prasatá nenapadne nosiť so sebou sáčok a odniesť to odtiaľ preč. ??????
+🎣 Niektorí rybári sa boja rybárskej stráže, pretože podľa zákona o rybárstve nesmú mať neporiadok na mieste kde lovia ryby. A tak všetok odpad čo tam nájdu a vyprodukujú poschovávajú kde len môžu. Ale prasatá nenapadne nosiť so sebou sáčok a odniesť to odtiaľ preč. 😭😭😭
 </span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
-???????Dnes som zbieral práve na takých miestach, kde neustále vídavam len rybárov. ?? Našiel som po nich sáčky so smeťami hodené v kríkoch. Pozbieral som aj dve veľké prázdne igelitové vrecia, rybársky silón, parafínový vosk, konzervy, kelímky, mikrotén, obaly, alobal, gumenú rukavicu, rôzne plasty, fajčiarsky odpad, ochrany na jednoraz. holiaci strojček, PET-ky, plechovku, sklenenú fľašu atď.
+🚶🧹🗑️Dnes som zbieral práve na takých miestach, kde neustále vídavam len rybárov. 🎣 Našiel som po nich sáčky so smeťami hodené v kríkoch. Pozbieral som aj dve veľké prázdne igelitové vrecia, rybársky silón, parafínový vosk, konzervy, kelímky, mikrotén, obaly, alobal, gumenú rukavicu, rôzne plasty, fajčiarsky odpad, ochrany na jednoraz. holiaci strojček, PET-ky, plechovku, sklenenú fľašu atď.
 </span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
- ?? §??
+ 🎣 §📜
 Podľa zákona o rybárstve:
 (18)
 Loviaci nesmie pred začiatkom lovu, počas lovu, pri prerušení lovu a po ukončení lovu znečisťovať akýmkoľvek spôsobom miesto lovu a jeho okolie; loviaci zodpovedá za čistotu miesta lovu a jeho okolia. Ak loviaci rybu v mieste lovu vyčistí a zbaví vnútorností, jej zvyšky nesmie vhodiť do vody ani nechať na mieste lovu.
@@ -3486,7 +3489,7 @@ Loviaci nesmie pred začiatkom lovu, počas lovu, pri prerušení lovu a po ukon
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
 Na lúke neďaleko od jazera som odfotil ešte kvitnúci divozel (Verbascum) a opeľovača  - mušku pestricu pruhovanú (Episyrphus balteatus).
-?????
+💚🚮♻
 </span></p>
 
 <p class=MsoNormal>	
