--- a/2022.html
+++ b/2022.html
@@ -3597,7 +3597,191 @@ style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
   </td>
  </tr>
 </table>
+<br><br>
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 24.11.2022</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🍂Dnes som zbieral na jazerách v ranných hodinách. Bolo sychravé a veterné počasie. Zbieral som odpad z južného brehu veľkého jazera. Z brehov a pichľavých kríkov. Neskutočné čo tam 🎣 🐷 zanechávajú. 
+Klasicky, väčšina odpadu čo som pozbieral bola nahádzaná v kríkoch. Prevažne rybársky odpad. Čo všetko som našiel si môžete pozrieť na fotkách. 💚🏞️🚮♻
+</span></p>
+<br>
+<p class=MsoNormal>	
+#cunovskejazera #jazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #tráva #výrastkovia #cistavoda #zberodpadkov #plasty #upratovanie</p>
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
 
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image343.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image343.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image344.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image344.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image345.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image345.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image346.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image346.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image347.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image347.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image348.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image348.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image349.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image349.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image350.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image350.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image351.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image351.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image352.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image352.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image353.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image353.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image354.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image354.jpg"></a></p>
+  </td>
+
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image355.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image355.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image356.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image356.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image357.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image357.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image358.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image358.jpg"></a></p>
+  </td>
+
+ </tr>
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>vaječné škrupiny <br>v euro obale </p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+ </tr>
+</table>
+</table>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image359.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image359.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image360.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image360.jpg"></a></p>
+  </td>
+
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image361.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image361.jpg"></a></p>
+  </td>
+
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image362.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image362.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image363.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image363.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image364.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image364.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image365.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image365.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image366.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image366.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image367.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image367.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image368.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image368.jpg"></a></p>
+  </td>
+ </tr>
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Z plechovky a fľaša ponachádzané ešte minule</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+ </tr>
+</table>
 	
 	
 
